# TeaEngine

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  PutToMain  README.md  gen-docs.lua  main.nelua  makefile  save  test
docs/event/: event.md
docs/event-manager/: event-manager.md  event.md
docs/fileystem/: filesystem.md
docs/gui/: gui.md  gui.md.bak
docs/information-handler/: information-handler.md
docs/mouse/: mouse.md
docs/obj2d/: object.md
docs/obj3d/: object.md
docs/render/: render.md
docs/transform/: transform.md
docs/uimanager/: uimanager.md
docs/utilities/: init.md
engine/engine-gui/: engine-gui.nelua
engine/event/: event.nelua
engine/event-manager/: event-manager.nelua
engine/gui/: gui.nelua  gui.nelua.bak  init.nelua  uimanager.nelua
engine/information-handler/: information-handler.nelua
engine/intro-manager/resources/: TeaEngineIntroScaled.ase
engine/mouse/: mouse.nelua
engine/obj2d/: object.nelua
engine/passable-event/: passable-event.nelua
engine/render/: render-ui.nelua  render.nelua
engine/transform/: transform.nelua
engine/uimanager/: uimanager.nelua
engine/utilities/: init.nelua
examples/: window.rs
src/: Makefile  age.md  engine.rs  lib.rs  main.nelua  raylib.nelua  window_config.rs
src/ecs/: component.rs  component_manager.rs  entity.rs  entity_manager.rs  mod.rs  system.rs  world.rs
src/engine/gui/: gui.nelua  gui.nelua.bak
src/engine/information-handler/: information-handler.nelua
src/engine/mouse/: mouse.nelua
utilites/: ErrorHandler.nelua
(+3 files in other folders)
