[package]
name = "teaengine"
version = "0.1.0"
edition = "2021"
authors = [ "TeaSpillStudios <TeaSpillStudios@proton.me>" ]
license = "MIT"
homepage = "https://TeaSpill.vercel.app/projects/teaengine"
repository = "https://github.com/TeaEngine/TeaEngine"
description = """
A simplistic game engine wrote in rust.
"""
readme="README.md"

[dependencies]
