[package]
name = "teaengine"
version = "0.1.0"
edition = "2021"
authors = [ "TeaSpillStudios <TeaSpillStudios@proton.me>" ]
license = "MIT"
homepage = "https://TeaSpill.vercel.app/projects/teaengine"
repository = "https://github.com/TeaEngine/TeaEngine"
description = """
A simplistic game engine wrote in rust.
"""
readme="README.md"

[lib]
name = "teaengine"
path = "src/lib.rs"

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true

[dependencies]
env_logger = "0.9.3"
log = "0.4.17"
